added updated images

--- a/Eapp/templates/home.html
+++ b/Eapp/templates/home.html
@@ -127,7 +127,7 @@
 
       <div class="product-card">
           <a href="/asterbot">
-              <img src="{% static 'images/productaster4.jpg' %}" alt="Asterbot">
+              <img src="{% static 'images/aster.png' %}" alt="Asterbot">
           </a>
           <h3>Asterbot</h3>
       </div>
